# string_builder

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: wipe_doc.cmake
doc/html/: annotated.html  classbosswestfalen_1_1string__builder-members.html  classbosswestfalen_1_1string__builder.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespacebosswestfalen.html  namespaces.html  pages.html  string__builder_8hpp.html  string__builder_8hpp__incl.map  string__builder_8hpp__incl.md5  string__builder_8hpp_source.html  to__string_8hpp.html  to__string_8hpp_source.html  todo.html
doc/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
src/: string_builder.hpp  to_string.hpp
test/: CMakeLists.txt
test/src/unit/: helper_types.hpp  test_build.cpp  test_constructor.cpp  test_convertion.cpp  test_exception.cpp  test_fail.cpp  test_pass.cpp
